--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="..\css\styles.css"> 
-  <link rel="icon" href="..\images\icon.ico" sizes="16x16 32x32">
+  <link rel="stylesheet" href="css\styles.css"> 
+  <link rel="icon" href="images\icon.ico" sizes="16x16 32x32">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Умный бюджет</title>
 </head>
@@ -106,11 +106,11 @@
         <p style="border: 1px solid white; padding: 10px;">Email: info@example.com</p>
       </div>
   </section>
-  <script src="..\main\bio.js"></script>
-  <script src="..\main\fonsv.js"></script>
-  <script src="..\main\fonfun.js"></script>
-  <script src="..\main\qwe.js"></script>
-  <script src="..\main\scroll.js"></script>
+  <script src="js\bio.js"></script>
+  <script src="js\fonsv.js"></script>
+  <script src="js\fonfun.js"></script>
+  <script src="js\qwe.js"></script>
+  <script src="js\scroll.js"></script>
 
 </body>
 </html>
