--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
     <section id="home">
         <div class="container" style="width: 100%; text-align: center;">
-            <img class="img2" src="..\images\icon.ico" alt="Логотип" style="max-width: 50px;">
+            <img class="img2" src="images\icon.ico" alt="Логотип" style="max-width: 50px;">
             <h1 style=" color: rgb(255, 255, 255); font-size: 40px;">Умный Бюджет</h1>
             <p style=" color: white; font-size: 20px; font-weight: bold;">"Умный Бюджет" - это удобное приложение для учета финансов, которое поможет вам легко и эффективно управлять своим бюджетом. С его помощью вы сможете вести учет доходов и расходов, создавать категории для различных трат, устанавливать финансовые цели и отслеживать их достижение, а также получать графические отчеты о своей финансовой активности. Благодаря удобному интерфейсу и интуитивно понятным функциям "Умный Бюджет" станет незаменимым помощником в планировании и контроле ваших финансов.</p>
             <a href="#" class="download-btn" style="background-color: white; color: #000000; font-weight: bold;">Скачать приложение</a>
@@ -44,17 +44,17 @@
       <h2 style="text-align:center;">Функции</h2>
       <div class="container1" >
           <div class="funk"  >
-            <img style="max-width: 70px; padding-top: 20px;" src="../images/logo1.png" >
+            <img style="max-width: 70px; padding-top: 20px;" src="images/logo1.png" >
             <h3>1. Учет доходов и расходов</h3>
             <p style="display: none;">Пользователь может легко отслеживать и записывать все свои доходы и расходы. Приложение предоставляет удобный интерфейс для добавления новых операций и категоризации их. Это позволяет пользователям быстро и точно контролировать, на что они тратят свои деньги.</p>
           </div>
           <div class="funk"  >
-            <img style="max-width: 70px; padding-top: 20px;" src="../images/logo2.png" >
+            <img style="max-width: 70px; padding-top: 20px;" src="images/logo2.png" >
             <h3>2. Бюджетное планирование</h3>
             <p style="display: none;">"Умный Бюджет" предоставляет возможность установки месячного бюджета и отслеживания его выполнения. Пользователь может установить ограничения на каждую категорию расходов и получать уведомления, если он приближается к предельной сумме. Это позволяет им контролировать свои расходы и избегать необходимости сокращать свой бюджет.</p>
           </div>
           <div class="funk"  >
-            <img style="max-width: 70px; padding-top: 20px;" src="../images/logo3.png" >
+            <img style="max-width: 70px; padding-top: 20px;" src="images/logo3.png" >
             <h3>3. Анализ финансового состояния</h3>
             <p style="display: none;">Приложение предоставляет пользователю наглядные диаграммы и графики, которые отображают его доходы и расходы. Это помогает пользователям лучше понять, на что они тратят больше всего своих средств и позволяет им принимать информированные решения о своем бюджете.</p>
           </div>
@@ -71,25 +71,25 @@
           <h2 style="text-align:center;padding-bottom: 25px;">Команда разработчиков</h2>
           <div class="container2" >
             <div class="member" style="text-align:center;">
-              <img class="member-img" src="../images/prof2.jpg" alt="Фото разработчика 1">
+              <img class="member-img" src="images/prof2.jpg" alt="Фото разработчика 1">
               <h3>Шайтор Дмитрий Вадимович</h3>
               <p>Разработчик</p>
               <div class="bio" style="display: none;">Биография Дмитрия Шайтора...</div>
             </div>
             <div class="member" style="text-align:center;">
-              <img class= "member-img" src="../images/prof3.jpg" alt="Фото разработчика 2">
+              <img class= "member-img" src="images/prof3.jpg" alt="Фото разработчика 2">
               <h3>Мамутов Егор</h3>
               <p>Тим Лид</p>
               <div class="bio" style="display: none;">Биография Егора Мамутова...</div>
             </div>
             <div class="member" style="text-align:center;">
-              <img class= "member-img" src="../images/prof5.jpg" alt="Фото разработчика 3">
+              <img class= "member-img" src="images/prof5.jpg" alt="Фото разработчика 3">
               <h3>Гаганов Иван</h3>
               <p>Разработчик</p>
               <div class="bio" style="display: none;">Биография Ивана Гаганова...</div>
             </div>
             <div class="member" style="text-align:center;">
-              <img class= "member-img" src="../images/prof4.jpg" alt="Фото разработчика 4">
+              <img class= "member-img" src="images/prof4.jpg" alt="Фото разработчика 4">
               <h3>Поляков Дмитрий</h3>
               <p>Дизайнер</p>
               <div class="bio" style="display: none;">Биография Дмитрия Полякова...</div>
